--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(SmoothScrollDestroyer)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(GCC_COVERAGE_COMPILE_FLAGS "-static")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}" )
+set(GCC_COVERAGE_COMPILE_FLAGS "-static -Wall -Wextra -Wfloat-equal -Wundef -Wcast-align -Wwrite-strings -Wlogical-op -Wredundant-decls -Wshadow -Woverloaded-virtual")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
 
-add_executable(SmoothScrollDestroyer main.cpp)
+
+add_executable(SmoothScrollDestroyer main.cpp WinReg.hpp)
